--- a/Company Site/src/Components/Navbar/Navbar.css
+++ b/Company Site/src/Components/Navbar/Navbar.css
@@ -1,3 +1,6 @@
+.app .nav__hamburger {
+  display: none;
+}
 .navbar{
     margin-top: 10px;
     padding: auto;
@@ -34,5 +37,8 @@
 .Navbar > a:hover{
     transition: all 0.3s ease-in-out;
     text-decoration-line: underline;
+    
+}
+@media (max-width:720px) {
     
 }
