--- a/Company Site/src/Components/Navbar/Navbar.css
+++ b/Company Site/src/Components/Navbar/Navbar.css
@@ -16,7 +16,7 @@
     align-items: center;
     text-align: center;
     font-size: 25px;
-    background-color:#1A4D2E ;
+    background-color:#D5CEA3 ;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 /* .Navbar:hover{
@@ -28,7 +28,7 @@
 }
 .Navbar > a{
     text-decoration: none;
-    color: white;
+    color: #1A120B;
     font-size: 15px;
     margin-left: 30px;
 }
