--- a/Company Site/src/Components/Body/Home.css
+++ b/Company Site/src/Components/Body/Home.css
@@ -5,9 +5,9 @@
   height: auto;
   margin: auto;
   margin-top: 10px;
-/* 
+  /* 
   border: 1px solid #000; */
-  background-color:#D5CEA3 ;
+  background-color: #d5cea3;
   position: relative;
 }
 .subpart1 {
@@ -30,7 +30,7 @@
   width: 45%;
   height: 350px;
   margin-right: 100px;
-  background-color: #3C2A21;
+  background-color: #3c2a21;
   border: 2px solid black;
   text-align: center;
   padding: 60px 10px 10px 120px;
@@ -43,46 +43,46 @@
 
 @media (max-width: 1180px) {
   .main_box {
-  width: 100%;
-  display: flex;
-  background-color:#D5CEA3 ;
-  position: relative;
+    width: 100%;
+    display: flex;
+    background-color: #d5cea3;
+    position: relative;
   }
   .subpart1 {
-  width: 50%;
-  height: 250px;
-  position: absolute;
+    width: 50%;
+    height: 250px;
+    position: absolute;
 
-  top: 0;
-  left: 50;
-}
-.subpart1 > img {
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  margin-top: 30px;
-  margin-left: 5%;
-  background-color: blanchedalmond;
-  z-index: 12;
-}
-.subpart2 {
-  width: 50%;
-  height: 250px;
-  margin-right: 2px;
-  background-color: #3C2A21;
-  border: 2px solid black;
-  text-align: center;
-  padding: 10px 10px 10px 10px;
-  color: whitesmoke;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-}
-.subpart2 > h2{
-font-size: 15px;
-}
-.subpart2 > p{
-font-size: 15px;
-}
+    top: 0;
+    left: 50;
+  }
+  .subpart1 > img {
+    width: 96%;
+    height: 100%;
+    margin: auto;
+    margin-top: 30px;
+    margin-left: 5%;
+    background-color: blanchedalmond;
+    z-index: 12;
+  }
+  .subpart2 {
+    width: 50%;
+    height: 250px;
+    margin-right: 2%;
+    background-color: #3c2a21;
+    border: 2px solid black;
+    text-align: center;
+    padding: 10px 10px 10px 10px;
+    color: whitesmoke;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+  }
+  .subpart2 > h2 {
+    font-size: 15px;
+  }
+  .subpart2 > p {
+    font-size: 15px;
+  }
 }
