--- a/Company Site/src/Components/Body/Home.css
+++ b/Company Site/src/Components/Body/Home.css
@@ -40,6 +40,24 @@
   right: 0;
   z-index: -1;
 }
+.secondPhase{
+  width: 100%;
+  margin: auto;
+  margin-top: 50%;
+  display: flex;
+  
+}
+.secondPhase > img{
+  width: 50%;
+}
+.secondPhase>h2{
+  width: 50%;
+  text-align: center;
+  margin-top: 15%;
+  font-weight: bold;
+  font-style: italic;
+  font-size: 35px;
+}
 
 @media (max-width: 1180px) {
   .main_box {
