--- a/Company Site/src/Components/Body/Home.css
+++ b/Company Site/src/Components/Body/Home.css
@@ -82,7 +82,23 @@
   font-size: 35px;
 }
 
+.Section3{
+  width: 100%;
+  margin-top: 10px;
+}
+.Section3>img{
+  width: 100%;
+  height: 600px;
+}
 
+.Section4{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 20px;
+  margin: 20px 10px 10px 10px;
+  text-align: center;
+}
 @media (max-width: 1180px) {
   .main_box {
     width: 100%;
